@@ -155,6 +155,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #2461: added tests for distutils.util
+
 - Issue #1008086: Fixed socket.inet_aton() to always return 4 bytes even on
   LP64 platforms (most 64-bit Linux, bsd, unix systems).
 
